# Agrinova

./: .dockerignore  DEPLOYMENT.md  Dockerfile  FRONTEND_API_GUIDE.md  README.md  RFM_with_Target.csv  api-types.ts  cloud-run-config.yaml  debug_deployment.py  demo.html  deploy.sh  main.py  pyproject.toml  requirements.txt  test_api.py  test_debug.py  test_guide_implementation.py
